# trivox

./: .gitignore  CMakeLists.txt
res/: raytrace.frag  test.frag  test2.frag
src/: base.h  grid.h  main.cpp  render_pyramid.cpp  renderer.cpp  renderer.h  scene.h  types.cpp  types.h  util.cpp  util.h  vec_funcs.cpp  vec_funcs.h  vec_ops.h  world.cpp  world.h
src/s/: s_test0.cpp
src/w/: w_test0.cpp
